@@ -1,3 +1,6 @@
+2009-06-04  Bahadır Kandemir <bahadir@pardus.org.tr>
+	* bin/service.py: Use comar.Link()
+
 2009-05-26  Ozan Çağlayan <ozan@pardus.org.tr>
 	* bin/network.py: Print colorized message when bringing up/down the
 	profiles, don't offer packages providing no devices when creating
